--- a/css/main.css
+++ b/css/main.css
@@ -542,6 +542,8 @@
         background-color: #fff;
         margin-bottom: 20px;   
         border-radius: 10px;
+        /* margin-bottom: 20px;   
+        border-radius: 10px; */
     }
 }
 /* services ends */
